--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mycity4kids"
-    android:versionCode="11"
-    android:versionName="2.7"> <!-- version increase for final release -->
+    android:versionCode="12"
+    android:versionName="2.8"> <!-- version increase for final release -->
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="22" />
@@ -75,11 +75,12 @@
 
         <receiver
             android:name="com.mycity4kids.receiver.InstallReferrerReceiver"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.android.vending.INSTALL_REFERRER" />
             </intent-filter>
-        </receiver>-->
+        </receiver>
+        -->
 
         <activity
             android:name=".filechooser.com.ipaulpro.afilechooser.FileChooserActivity"
@@ -122,6 +123,7 @@
                 <data
                     android:host="www.mycity4kids.com"
                     android:scheme="https" />
+
                 <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.BROWSABLE" />
@@ -373,8 +375,13 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.activity.ArticlesAndBlogsDetailsActivity"
+            android:parentActivityName=".ui.activity.DashboardActivity"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustPan">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mycity4kids.ui.activity.DashboardActivity" />
+        </activity>
         <activity
             android:name=".ui.activity.ArticleBlogSearchDialogActivity"
             android:screenOrientation="portrait"
