--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mycity4kids"
-    android:versionCode="15"
-    android:versionName="2.9"> <!-- version increase for final release -->
+    android:versionCode="16"
+    android:versionName="3.0"> <!-- version increase for final release -->
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="22" />
@@ -375,6 +375,24 @@
             android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.activity.ArticlesAndBlogsDetailsActivity"
+            android:parentActivityName=".ui.activity.DashboardActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mycity4kids.ui.activity.DashboardActivity" />
+        </activity>
+        <activity
+            android:name=".ui.activity.KidsBirthdayActivity"
+            android:parentActivityName=".ui.activity.DashboardActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustPan">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.mycity4kids.ui.activity.DashboardActivity" />
+        </activity>
+        <activity
+            android:name=".ui.activity.PlanYourWeekActivity"
             android:parentActivityName=".ui.activity.DashboardActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan">
