--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -30,8 +30,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-    <uses-permission android:name="android.permission.READ_CONTACTS"></uses-permission>
+    <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <uses-permission android:name="android.permission.RECEIVE_SMS" />
+    <uses-permission android:name="android.permission.READ_SMS" />
 
     <!-- <permission
          android:name="com.mycity4kids.gcm.permission.C2D_MESSAGE"
@@ -98,36 +100,75 @@
                 <data android:mimeType="*/*" />
             </intent-filter>
         </activity>
-<activity android:name="com.chatPlatform.ActivitiesFragments.ChatDashboard"
-    android:screenOrientation="portrait"
+        <activity
+            android:name="com.chatPlatform.ActivitiesFragments.ChatDashboard"
+            android:screenOrientation="portrait">
+            <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
 
->
-    <intent-filter>
-        <action android:name="android.intent.action.MAIN" />
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity
+            android:name="com.chatPlatform.ActivitiesFragments.HomeworkFragment"
+            android:screenOrientation="portrait">
+            <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
 
-        <category android:name="android.intent.category.LAUNCHER" />
-    </intent-filter>
-</activity>
-        <activity android:name="com.chatPlatform.ActivitiesFragments.CreateChat"
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity
+            android:name="com.chatPlatform.ActivitiesFragments.QuesAnsActivity"
+            android:screenOrientation="portrait">
+            <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
+
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity
+            android:name="com.chatPlatform.ActivitiesFragments.QADetailsActivity"
+            android:screenOrientation="portrait">
+            <!--<intent-filter>-->
+            <!--<action android:name="android.intent.action.MAIN" />-->
+
+            <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
+        </activity>
+        <activity
+            android:name="com.chatPlatform.ActivitiesFragments.CreateChat"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan"></activity>
-        <activity android:name="com.chatPlatform.ActivitiesFragments.CreateGroup"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name="com.chatPlatform.ActivitiesFragments.GroupActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity android:name="com.chatPlatform.ActivitiesFragments.AccessContacts"
+        <activity
+            android:name=".ui.activity.ActivityVerifyOTP"
             android:screenOrientation="portrait"
-        ></activity>
+            android:windowSoftInputMode="stateVisible"></activity>
+        <activity
+            android:name="com.chatPlatform.ActivitiesFragments.CreateGroup"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name="com.chatPlatform.ActivitiesFragments.GroupActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name="com.chatPlatform.ActivitiesFragments.AccessContacts"
+            android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.activity.ListFamilyInvitesActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.SocialSignUpActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppBaseTheme">
-           <!-- <intent-filter>
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
 
             <!--The following intent filter is added to provide deep linking to the MC4K app  -->
             <intent-filter>
@@ -180,6 +221,11 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Transparent" />
 
+        <activity
+            android:name=".ui.activity.CreateFamilyActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Transparent" />
 
         <activity
             android:name=".ui.activity.BlogFilterActivity"
