--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -100,59 +100,11 @@
                 <data android:mimeType="*/*" />
             </intent-filter>
         </activity>
-        <activity
-            android:name="com.chatPlatform.ActivitiesFragments.ChatDashboard"
-            android:screenOrientation="portrait">
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
 
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
-        <activity
-            android:name="com.chatPlatform.ActivitiesFragments.HomeworkFragment"
-            android:screenOrientation="portrait">
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
-
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
-        <activity
-            android:name="com.chatPlatform.ActivitiesFragments.QuesAnsActivity"
-            android:screenOrientation="portrait">
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
-
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
-        <activity
-            android:name="com.chatPlatform.ActivitiesFragments.QADetailsActivity"
-            android:screenOrientation="portrait">
-            <!--<intent-filter>-->
-            <!--<action android:name="android.intent.action.MAIN" />-->
-
-            <!--<category android:name="android.intent.category.LAUNCHER" />-->
-            <!--</intent-filter>-->
-        </activity>
-        <activity
-            android:name="com.chatPlatform.ActivitiesFragments.CreateChat"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan"></activity>
         <activity
             android:name=".ui.activity.ActivityVerifyOTP"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="stateVisible"></activity>
-        <activity
-            android:name="com.chatPlatform.ActivitiesFragments.CreateGroup"
-            android:screenOrientation="portrait"></activity>
-        <activity
-            android:name="com.chatPlatform.ActivitiesFragments.GroupActivity"
-            android:screenOrientation="portrait"></activity>
-        <activity
-            android:name="com.chatPlatform.ActivitiesFragments.AccessContacts"
-            android:screenOrientation="portrait"></activity>
+            android:windowSoftInputMode="stateVisible"/>
         <activity
             android:name=".ui.activity.ListFamilyInvitesActivity"
             android:screenOrientation="portrait" />
