--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-gcm:7.5.0'
     compile 'com.google.android.gms:play-services-location:7.5.0'
     compile 'com.google.android.gms:play-services-appindexing:7.5.0'
+    compile 'com.google.android.gms:play-services-analytics:7.5.0'
     compile 'com.android.support:design:22.2.0'
     compile 'com.android.support:cardview-v7:+'
     compile 'com.nineoldandroids:library:2.4.0'
