--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mycity4kids"
-    android:versionCode="18"
-    android:versionName="3.0.2"> <!-- version increase for final release -->
+    android:versionCode="19"
+    android:versionName="3.0.3"> <!-- version increase for final release -->
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="22" />
@@ -109,7 +109,13 @@
             android:name=".ui.activity.ListFamilyInvitesActivity"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".ui.activity.CreateFamilyActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.activity.SocialSignUpActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.UpdateMobileNumberActivity"
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.activity.SplashActivity"
@@ -173,11 +179,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Transparent" />
 
-        <activity
-            android:name=".ui.activity.CreateFamilyActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.Transparent" />
 
         <activity
             android:name=".ui.activity.BlogFilterActivity"
@@ -246,7 +247,6 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
-
 
         <activity
             android:name=".ui.activity.ActivityLogin"
