--- a/MyCity4Kids/facebook-android-sdk-3.6.0/build.gradle
+++ b/MyCity4Kids/facebook-android-sdk-3.6.0/build.gradle
@@ -1,14 +1,13 @@
 apply plugin: 'android-library'
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
+    compile fileTree(include: '*.jar', dir: 'libs')
     compile 'com.android.support:support-v4:22.1.1'
 }
 
 android {
     compileSdkVersion 21
     buildToolsVersion "21.1.2"
-
     sourceSets {
         main {
             manifest.srcFile 'AndroidManifest.xml'
@@ -31,5 +30,10 @@ android {
         // by a similar customization.
         debug.setRoot('build-types/debug')
         release.setRoot('build-types/release')
+    }
+    buildTypes {
+        debug {
+            debuggable false
+        }
     }
 }
