--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mycity4kids"
-    android:versionCode="20"
-    android:versionName="3.1.1">
+    android:versionCode="22"
+    android:versionName="3.1.3">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -253,7 +253,7 @@
             android:name=".ui.activity.ActivityLogin"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
+            android:windowSoftInputMode="adjustResize" />
 
         <activity
             android:name=".ui.activity.ActivityCreateAppointment"
