--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -188,6 +188,11 @@
             android:theme="@style/Theme.Transparent" />
 
         <activity
+            android:name=".ui.activity.BloggerDashboardActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"/>
+
+        <activity
             android:name=".ui.activity.BlogDetailActivity"
             android:configChanges="keyboardHidden|screenSize|orientation|screenLayout|uiMode|keyboard"
             android:label="@string/app_name"
