--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mycity4kids"
-    android:versionCode="23"
-    android:versionName="4.0.1">
+    android:versionCode="24"
+    android:versionName="4.0.2">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -187,7 +187,8 @@
         <activity
             android:name=".ui.activity.BloggerDashboardActivity"
             android:label="@string/app_name"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.nnn"/>
 
         <activity
             android:name=".ui.activity.BlogDetailActivity"
