--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -28,16 +28,17 @@ dependencies {
     //    compile files('libs/AndroidViewAnimations-1.1.3.jar')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'org.apache.httpcomponents:httpmime:4.5'
-    compile 'com.google.android.gms:play-services-maps:7.5.0'
-    compile 'com.google.android.gms:play-services-plus:7.5.0'
-    compile 'com.google.android.gms:play-services-gcm:7.5.0'
-    compile 'com.google.android.gms:play-services-location:7.5.0'
-    compile 'com.google.android.gms:play-services-appindexing:7.5.0'
-    compile 'com.google.android.gms:play-services-analytics:7.5.0'
+    compile 'com.google.android.gms:play-services-maps:8.1.0'
+    compile 'com.google.android.gms:play-services-plus:8.1.0'
+    compile 'com.google.android.gms:play-services-gcm:8.1.0'
+    compile 'com.google.android.gms:play-services-location:8.1.0'
+    compile 'com.google.android.gms:play-services-appindexing:8.1.0'
+    compile 'com.google.android.gms:play-services-analytics:8.1.0'
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:+'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.mikhaellopez:circularimageview:3.0.2'
     //    compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.google.api-client:google-api-client:1.20.0'
     compile 'com.google.api-client:google-api-client-android:1.20.0'
@@ -88,7 +89,9 @@ android {
             javaMaxHeapSize "4g"
         }
     }
-
+    lintOptions {
+        checkReleaseBuilds false
+    }
     configurations {
         all*.exclude group: 'com.google.guava', module: 'guava-jdk5'
     }
