--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -155,11 +155,6 @@
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.activity.LoginActivity"
-            android:label="@string/title_activity_login"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
         <!-- Login Activity for facebook & app id -->
         <activity
             android:name="com.facebook.LoginActivity"
@@ -188,7 +183,7 @@
             android:name=".ui.activity.BloggerDashboardActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.nnn"/>
+            android:theme="@style/Theme.nnn" />
 
         <activity
             android:name=".ui.activity.BlogDetailActivity"
@@ -280,11 +275,6 @@
 
         <activity android:name=".googlemap.MapActivity" />
         <activity
-            android:name=".ui.activity.RegistrationActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:windowSoftInputMode="adjustPan" />
-        <activity
             android:name=".ui.activity.HomeCategoryActivity"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustPan" />
@@ -359,10 +349,6 @@
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Transparent" />
         <activity
-            android:name=".ui.activity.LoginEmailActivity"
-            android:screenOrientation="portrait"
-            android:theme="@style/Theme.Transparent" />
-        <activity
             android:name=".ui.activity.YouTubeVideoActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Transparent"
@@ -398,6 +384,7 @@
             android:name=".ui.activity.ArticlesAndBlogsDetailsActivity"
             android:parentActivityName=".ui.activity.DashboardActivity"
             android:screenOrientation="portrait"
+            android:theme="@style/Theme.Transparent"
             android:windowSoftInputMode="adjustPan">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
@@ -477,6 +464,9 @@
         <activity
             android:name=".editor.ArticleImageTagUpload"
             android:screenOrientation="portrait"></activity>
+        <activity
+            android:name=".ui.activity.NewArticleDetailsActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name="com.mycity4kids.reminders.AlarmDialogActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
