--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mycity4kids"
-    android:versionCode="25"
-    android:versionName="4.0.3">
+    android:versionCode="26"
+    android:versionName="4.1">
 
     <uses-sdk
         android:minSdkVersion="14"
@@ -390,6 +390,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.mycity4kids.ui.activity.DashboardActivity" />
         </activity>
+        <activity
+            android:name=".ui.activity.SearchArticlesAndAuthorsActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.Transparent"
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".ui.activity.KidsBirthdayActivity"
             android:parentActivityName=".ui.activity.DashboardActivity"
