--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -12,7 +12,7 @@ apply plugin: 'io.fabric'
 
 
 repositories {
-    mavenCentral()
+    jcenter()
     maven { url 'https://maven.fabric.io/public' }
 }
 
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:+'
     compile 'com.nineoldandroids:library:2.4.0'
+    compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:recyclerview-v7:23.1.1'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     //    compile 'com.google.android.gms:play-services:7.5.0'
@@ -44,7 +45,6 @@ dependencies {
     compile 'com.google.api-client:google-api-client-gson:1.20.0'
     compile 'com.google.apis:google-api-services-calendar:v3-rev125-1.20.0'
     compile 'com.android.support:multidex:1.0.0'
-    compile 'com.mcxiaoke.volley:library:1.0.19'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.1@aar') {
         transitive = true;
     }
@@ -97,6 +97,7 @@ android {
     }
     configurations {
         all*.exclude group: 'com.google.guava', module: 'guava-jdk5'
+        all*.exclude group:'com.android.volley'
     }
     packagingOptions {
         exclude 'META-INF/ASL2.0'
