--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -30,14 +30,14 @@
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <!--<uses-permission android:name="android.permission.WAKE_LOCK" />-->
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
     <!-- <permission
          android:name="com.mycity4kids.gcm.permission.C2D_MESSAGE"
          android:protectionLevel="signature" />-->
 
-    <uses-permission android:name="com.mycity4kids.gcm.permission.C2D_MESSAGE" />
+  <!--  <uses-permission android:name="com.mycity4kids.gcm.permission.C2D_MESSAGE" />-->
 
 
     !-- Maps API needs OpenGL ES 2.0. -->
@@ -127,7 +127,7 @@
             </intent-filter>
 
             <!--The following intent filter is added to provide deep linking to the MC4K app  -->
-            <intent-filter>
+            <intent-filter android:autoVerify="true">
                 <data android:scheme="mc4k" />
                 <data android:scheme="mycity4kids" />
                 <data
@@ -500,7 +500,7 @@
         <receiver android:name="com.mycity4kids.reminders.ShareNotificationReceiver" />
         <receiver android:name="com.mycity4kids.reminders.ShareArticleReceiver" />
 
-        <service android:name="com.mycity4kids.gcm.GcmIntentService" />
+       <!-- <service android:name="com.mycity4kids.gcm.GcmIntentService" />-->
         <service android:name="com.mycity4kids.sync.PushTokenService" />
         <service android:name="com.mycity4kids.sync.SyncService" />
         <service android:name="com.mycity4kids.sync.RemainderEmailService" />
@@ -519,7 +519,7 @@
             android:enabled="true"
             android:exported="false" />
 
-        <receiver
+        <!--<receiver
             android:name="com.mycity4kids.gcm.GcmBroadcastReceiver"
             android:permission="com.google.android.c2dm.permission.SEND">
             <intent-filter>
@@ -527,10 +527,34 @@
 
                 <category android:name="com.chapp.android" />
             </intent-filter>
-        </receiver>
+        </receiver>-->
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="0955a2855f4c5641b7994b98f58aef7eadbf4cd5" />
-    </application>
 
+   <!--  FirebaseInstanceIdService performs security checks at runtime,
+          no need for explicit permissions despite exported="true"
+    <service android:name=".MyFirebaseInstanceIdService" android:exported="true">
+        <intent-filter>
+            <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+        </intent-filter>
+    </service>-->
+    <!-- [START firebase_service] -->
+        <service
+            android:name=".fcm.MyFcmListenerService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+    <!-- [END firebase_service] -->
+    <!-- [START firebase_iid_service] -->
+    <service
+        android:name=".fcm.MyInstanceIDListenerService">
+        <intent-filter>
+            <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+        </intent-filter>
+    </service>
+    <!-- [END firebase_iid_service] -->
+
+    </application>
 </manifest>
