--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -16,7 +16,7 @@ repositories {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: '*.jar')
+    compile fileTree(include: '*.jar', dir: 'libs')
     compile 'com.squareup.picasso:picasso:2.5.2'
     //    compile project(':google-play-services_lib')
 
@@ -27,11 +27,17 @@ dependencies {
     //    compile files('libs/AndroidViewAnimations-1.1.3.jar')
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'org.apache.httpcomponents:httpmime:4.5'
+
     compile 'com.google.android.gms:play-services-maps:9.0.0'
     compile 'com.google.android.gms:play-services-plus:9.0.0'
+    compile 'com.google.android.gms:play-services-gcm:9.0.0'
     compile 'com.google.android.gms:play-services-location:9.0.0'
     compile 'com.google.android.gms:play-services-appindexing:9.0.0'
     compile 'com.google.android.gms:play-services-analytics:9.0.0'
+    // Dependency for Google Sign-In
+    compile 'com.google.android.gms:play-services-auth:9.0.0'
+    compile 'com.google.android.gms:play-services-plus:9.0.0'
+
     compile 'com.android.support:design:23.1.1'
     compile 'com.android.support:cardview-v7:+'
     compile 'com.nineoldandroids:library:2.4.0'
