--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -60,6 +60,7 @@ dependencies {
     compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
     compile 'com.google.firebase:firebase-core:9.0.0'
     compile 'com.google.firebase:firebase-messaging:9.0.0'
+    compile 'org.apmem.tools:layouts:1.10@aar'
     compile project(':WordPressEditor')
     compile files('libs/comscore.jar')
 }
