--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -509,7 +509,10 @@
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-
+        <activity
+            android:name="com.yalantis.ucrop.UCropActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar"/>
         <receiver android:name="com.mycity4kids.reminders.AlarmReceiver" />
         <receiver android:name="com.mycity4kids.reminders.CancelNotificationReceiver" />
         <receiver android:name="com.mycity4kids.reminders.ShareNotificationReceiver" />
