--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     //    compile files('libs/AndroidEasingFunctions-1.0.0.jar')
 
     //    compile files('libs/AndroidViewAnimations-1.1.3.jar')
-    compile 'com.android.support:appcompat-v7:23.1.1'
+    compile 'com.android.support:appcompat-v7:23.4.0'
     compile 'org.apache.httpcomponents:httpmime:4.5'
 
     compile 'com.google.android.gms:play-services-maps:9.0.0'
@@ -38,11 +38,11 @@ dependencies {
     compile 'com.google.android.gms:play-services-auth:9.0.0'
     compile 'com.google.android.gms:play-services-plus:9.0.0'
 
-    compile 'com.android.support:design:23.1.1'
+    compile 'com.android.support:design:23.4.0'
     compile 'com.android.support:cardview-v7:+'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.volley:volley:1.0.0'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.4.0'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
     //    compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.google.api-client:google-api-client:1.20.0'
@@ -56,13 +56,16 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.0.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
-    compile 'com.squareup.okhttp3:okhttp:3.2.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.2.0'
+    compile 'com.squareup.okhttp3:okhttp:3.3.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
     compile 'com.google.firebase:firebase-core:9.0.0'
     compile 'com.google.firebase:firebase-messaging:9.0.0'
     compile 'org.apmem.tools:layouts:1.10@aar'
+    compile 'com.yalantis:ucrop:2.1.1'
     compile project(':WordPressEditor')
     compile files('libs/comscore.jar')
+    compile project( ':PinnedSectionListView')
+
 }
 
 //dependencies {
