Categories changes, BloggerDash mapping on all screens, profilePic json changes, Search Ui integration

--- a/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
+++ b/MyCity4Kids/MyCity4Kids/AndroidManifest.xml
@@ -493,6 +493,12 @@
             android:screenOrientation="portrait" />
 
         <activity
+            android:name=".ui.activity.ArticleListingActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.activity.CityBestArticleListingActivity"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".ui.activity.FilteredTopicsArticleListingActivity"
             android:screenOrientation="portrait" />
         <activity
