--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -62,6 +62,8 @@ dependencies {
     compile 'com.google.firebase:firebase-messaging:9.0.0'
     compile 'org.apmem.tools:layouts:1.10@aar'
     compile 'com.yalantis:ucrop:2.1.1'
+    compile 'com.getbase:floatingactionbutton:1.10.1'
+
     compile project(':WordPressEditor')
     compile files('libs/comscore.jar')
     compile project( ':PinnedSectionListView')
