--- a/MyCity4Kids/settings.gradle
+++ b/MyCity4Kids/settings.gradle
@@ -1,3 +1,3 @@
-include ':facebook-android-sdk-3.6.0', ':PinnedSectionListView'
+include ':facebook-android-sdk-3.6.0'
 include ':MyCity4Kids'
 include ':WordPressEditor'
