--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -64,8 +64,11 @@ dependencies {
     compile 'com.yalantis:ucrop:2.1.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
 
+    compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+
     compile project(':WordPressEditor')
     compile files('libs/comscore.jar')
+
 
 }
 
