--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -63,9 +63,9 @@ dependencies {
     compile 'org.apmem.tools:layouts:1.10@aar'
     compile 'com.yalantis:ucrop:2.1.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
-
+    compile 'com.lguipeng.bubbleview:library:1.0.0'
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
-
+    compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.1.+'
     compile project(':WordPressEditor')
     compile files('libs/comscore.jar')
 
