--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -13,21 +13,19 @@ apply plugin: 'io.fabric'
 repositories {
     jcenter()
     maven { url 'https://maven.fabric.io/public' }
+    maven { url 'https://dl.bintray.com/drummer-aidan/maven' }
 }
 
 dependencies {
     compile fileTree(include: '*.jar', dir: 'libs')
     compile 'com.squareup.picasso:picasso:2.5.2'
     //    compile project(':google-play-services_lib')
-
     //    compile ('com.facebook.android:facebook-android-sdk:3.23.1')
     compile project(':facebook-android-sdk-3.6.0')
     //    compile files('libs/AndroidEasingFunctions-1.0.0.jar')
-
     //    compile files('libs/AndroidViewAnimations-1.1.3.jar')
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'org.apache.httpcomponents:httpmime:4.5'
-
     compile 'com.google.android.gms:play-services-maps:9.8.0'
     compile 'com.google.android.gms:play-services-plus:9.8.0'
     compile 'com.google.android.gms:play-services-gcm:9.8.0'
@@ -37,7 +35,6 @@ dependencies {
     // Dependency for Google Sign-In
     compile 'com.google.android.gms:play-services-auth:9.8.0'
     compile 'com.google.android.gms:play-services-plus:9.8.0'
-
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.nineoldandroids:library:2.4.0'
@@ -67,10 +64,13 @@ dependencies {
     compile 'com.github.PhilJay:MPAndroidChart:v3.0.1'
     compile 'com.joanzapata.iconify:android-iconify-fontawesome:2.1.+'
     compile 'life.knowledge4:k4l-video-trimmer:1.0'
+    compile 'io.tus.java.client:tus-java-client:0.3.1'
+    compile 'io.tus.android.client:tus-android-client:0.1.4'
+    compile 'com.github.jakob-grabner:Circle-Progress-View:v1.3'
+    compile 'com.afollestad:easyvideoplayer:0.3.0'
     compile project(':WordPressEditor')
     compile files('libs/comscore.jar')
-
-
+    compile project(':progressviewslib')
 }
 
 //dependencies {
