--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -18,45 +18,48 @@ repositories {
 
 dependencies {
     compile fileTree(include: '*.jar', dir: 'libs')
-    compile 'com.squareup.picasso:picasso:2.5.2'
     //    compile project(':google-play-services_lib')
     //    compile ('com.facebook.android:facebook-android-sdk:3.23.1')
     compile project(':facebook-android-sdk-3.6.0')
     //    compile files('libs/AndroidEasingFunctions-1.0.0.jar')
     //    compile files('libs/AndroidViewAnimations-1.1.3.jar')
+    // Dependency for Google Sign-In
+    //    compile 'com.google.android.gms:play-services:7.5.0'
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.1@aar') {
+        transitive = true;
+    }
+    compile project(':WordPressEditor')
+    compile files('libs/comscore.jar')
+    compile project(':progressviewslib')
+    compile 'com.google.android.gms:play-services-plus:10.0.1'
+    compile 'com.google.android.gms:play-services-plus:10.0.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.android.support:appcompat-v7:24.1.1'
     compile 'org.apache.httpcomponents:httpmime:4.5'
-    compile 'com.google.android.gms:play-services-maps:9.8.0'
-    compile 'com.google.android.gms:play-services-plus:9.8.0'
-    compile 'com.google.android.gms:play-services-gcm:9.8.0'
-    compile 'com.google.android.gms:play-services-location:9.8.0'
-    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
-    compile 'com.google.android.gms:play-services-analytics:9.8.0'
-    // Dependency for Google Sign-In
-    compile 'com.google.android.gms:play-services-auth:9.8.0'
-    compile 'com.google.android.gms:play-services-plus:9.8.0'
+    compile 'com.google.android.gms:play-services-maps:10.0.1'
+    compile 'com.google.android.gms:play-services-gcm:10.0.1'
+    compile 'com.google.android.gms:play-services-location:10.0.1'
+    compile 'com.google.android.gms:play-services-analytics:10.0.1'
+    compile 'com.google.android.gms:play-services-auth:10.0.1'
     compile 'com.android.support:design:24.1.1'
     compile 'com.android.support:cardview-v7:24.1.1'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.android.volley:volley:1.0.0'
     compile 'com.android.support:recyclerview-v7:24.1.1'
     compile 'com.mikhaellopez:circularimageview:3.0.2'
-    //    compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.google.api-client:google-api-client:1.20.0'
     compile 'com.google.api-client:google-api-client-android:1.20.0'
     compile 'com.google.api-client:google-api-client-gson:1.20.0'
     compile 'com.google.apis:google-api-services-calendar:v3-rev125-1.20.0'
+    compile 'com.google.firebase:firebase-appindexing:10.0.0'
     compile 'com.android.support:multidex:1.0.0'
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.1@aar') {
-        transitive = true;
-    }
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.retrofit2:retrofit:2.0.1'
     compile 'com.squareup.retrofit2:converter-gson:2.0.1'
     compile 'com.squareup.okhttp3:okhttp:3.3.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.3.0'
-    compile 'com.google.firebase:firebase-core:9.8.0'
-    compile 'com.google.firebase:firebase-messaging:9.8.0'
+    compile 'com.google.firebase:firebase-core:10.0.1'
+    compile 'com.google.firebase:firebase-messaging:10.0.1'
     compile 'org.apmem.tools:layouts:1.10@aar'
     compile 'com.yalantis:ucrop:2.1.1'
     compile 'com.getbase:floatingactionbutton:1.10.1'
@@ -70,9 +73,6 @@ dependencies {
     compile 'com.afollestad:easyvideoplayer:0.3.0'
     compile 'com.plattysoft.leonids:LeonidsLib:1.3.2'
     compile 'commons-io:commons-io:2.4'
-    compile project(':WordPressEditor')
-    compile files('libs/comscore.jar')
-    compile project(':progressviewslib')
 }
 
 //dependencies {
