--- a/MyCity4Kids/MyCity4Kids/build.gradle
+++ b/MyCity4Kids/MyCity4Kids/build.gradle
@@ -74,6 +74,7 @@ dependencies {
     compile 'com.plattysoft.leonids:LeonidsLib:1.3.2'
     compile 'commons-io:commons-io:2.4'
     compile 'com.github.ittianyu:BottomNavigationViewEx:1.1.9'
+    compile 'org.adw.library:discrete-seekbar:1.0.1'
 }
 
 //dependencies {
